--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon api/index.js"
+    "dev": "nodemon api/index.js",
+    "build": "npm install && npm install --prefix app && npm run build --prefix app"
   },
   "keywords": [],
   "author": "",
