--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon api/index.js",
-    "build": "npm install && npm install --prefix app && npm run build --prefix app"
+    "build": "npm install && npm install  "
   },
   "keywords": [],
   "author": "",
